Spacing fix

--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -40,7 +40,7 @@
     grid-template-columns: 1fr 1fr 1fr;
   }
   .cards__block {
-    margin: 20px 10px;
+    margin: 10px 10px;
   }
   .cards__name {
     margin-bottom: 10px;
